# cookiecutter-pdm-docker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
cookiecutter_pdm/: cli.py
docs/: index.md  tutorial.md
{{cookiecutter.project_name}}/: .bumversion.cfg  .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  pyproject.toml  tox.ini
