[project]
name = "cookiecutter-pdm-docker"
description = "A python cookiecutter application to create a new python project that uses PDM to manage its dependencies."
authors = [
    { name = "belingud", email = "im.victor@qq.com" },
]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'PDM']
dynamic = ["version"]
license = { text = "MIT" }
requires-python = ">=3.8,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cookiecutter>=2.1.1"
]

[project.urls]
Repository = "https://github.com/belingud/cookiecutter-pdm-docker"
Homepage = "https://github.com/belingud/cookiecutter-pdm-docker"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ccpdm = 'cookiecutter_pdm.cli:main'

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
bump = "bump2version {args}"

[tool.pdm.build]
excludes = ["./**/.git", "tests", ".idea", ".vscode", ".venv", "pdm.lock", ".gitignore", "var"]
package-dir = "."
includes = ["cookiecutter_pdm"]
source-includes = [
    '{{cookiecutter.project_name}}/**/*',
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-cookies>=0.6.1",
    "tox>=3.25.1",
    "deptry>=0.6.4",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.235",
    "bump2version>=1.0.1",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
]

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict"
testpaths = ["tests/"]
python_files = ["tests/*/test*.py"]

[tool.pdm]
distribution = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_pdm"]

[tool.deptry]
extend_exclude = [
    "{{cookiecutter.project_name}}"
]
ignore_obsolete = ["cookiecutter"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
